--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "gulp-uglify-es": "^1.0.4"
     },
     "dependencies": {
+        "handlebars": "^4.0.11",
+        "mustache": "^2.3.2",
         "normalize.scss": "^0.1.0"
     }
 }
