--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     },
     "homepage": "https://github.com/vmolchanov/kelnik-entrance#readme",
     "devDependencies": {
+        "babel-core": "^6.26.3",
+        "babel-preset-env": "^1.7.0",
         "browser-sync": "^2.24.5",
         "del": "^3.0.0",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^5.0.0",
+        "gulp-babel": "^7.0.1",
         "gulp-csso": "^3.0.1",
         "gulp-imagemin": "^4.1.0",
         "gulp-rename": "^1.3.0",
